--- a/index.html
+++ b/index.html
@@ -8,44 +8,61 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!-- FontAwesomeの読み込み -->
     <script src="https://kit.fontawesome.com/b5fd11547c.js" crossorigin="anonymous"></script>
+    <!-- CSSの読み込み -->
+    <link rel="stylesheet" href="style.css">
     <title>お試しテトリス</title>
 </head>
 <body>
-    <!-- <div id="initialPage">
-
-    </div> -->
-    <div id="mainPage" class="d-block">
+    <!-- スタート画面 -->
+    <div id="initialPage">
+        <div class="vh-100 bg-dark d-flex justify-content-center align-items-center">
+            <div class="d-flex flex-column justify-content-center align-items-center text-center">
+                <div class="col-12 title-border d-flex justify-content-center align-items-center m-4">
+                    <h1 class="title-text text-danger">T</h1>
+                    <h1 class="title-text text-orange">E</h1>
+                    <h1 class="title-text text-warning">T</h1>
+                    <h1 class="title-text text-success">R</h1>
+                    <h1 class="title-text text-info">I</h1>
+                    <h1 class="title-text text-morado">S</h1>
+                </div>
+                <div class="col-12 d-flex justify-content-center p-5">
+                    <div class="col-6 d-flex justify-content-center">
+                        <button id="startBtn" class="btn btn-outline-warning btn-lg col-12">START</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- メイン画面 -->
+    <div id="mainPage" class="d-none">
         <div class="vh-100 bg-dark d-flex justify-content-center align-items-center">
             <div class="d-flex flex-column justify-content-center">
-                <div class="d-flex flex-row">
-                    <div class="col-5 bg-success d-flex flex-column">
-                        <div class="col-12 d-flex justify-content-around">
+                <div class="d-flex flex-row justify-content-between pb-2" style="height: 120px;">
+                    <div class="col-5 bg-oudo d-flex flex-column p-2">
+                        <div class="d-flex justify-content-between">
                             <h5>LEVEL:</h5>
                             <h5>0000</h5>
                         </div>
-                        <div class="col-12 d-flex justify-content-around">
+                        <div class="col-12 d-flex justify-content-between">
                             <h5>LINES:</h5>
                             <h5>0000</h5>
                         </div>
-                        <div class="col-12 d-flex justify-content-around">
+                        <div class="col-12 d-flex justify-content-between">
                             <h5>SCORE:</h5>
                             <h5>0000</h5>
                         </div>
                     </div>
-                    <div id="miniCanvasDiv" class="col-5 bg-info">
-                            <h5>Next</h5>
-                            <!-- <canvas id="miniCanvas"></canvas> -->
-                    </div>
-                    <div class="col-2 d-flex flex-column">
-                        <div class="bg-warning col-12 d-flex justify-content-center align-items-center" style="height: 60px;">
-                            <span class="font-weight-bold"><i class="fa-solid fa-arrow-rotate-left fa-2x"></i></span>
+                    <canvas id="miniCanvas" width="120px"></canvas>
+                    <div class="col-2 d-flex flex-column justify-content-around align-items-center">
+                        <div class="pt-0">
+                            <button id="resetBtn" class="btn btn-oudo"><i class="fa-solid fa-rotate-left fa-2x"></i></button>
                         </div>
-                        <div class="bg-light col-12 d-flex justify-content-center align-items-center" style="height: 60px">
-                            <span><i class="fa-solid fa-pause fa-2x" style="color: #505762;"></i></span>
+                        <div class="pb-0">
+                            <button id="pauseBtn" class="btn btn-oudo px-3"><i class="fa-solid fa-pause fa-2x"></i></button>
                         </div>
                     </div>
                 </div>
-                <div id="canvasDiv">
+                <div>
                     <canvas id="canvas"></canvas>
                 </div>
             </div>
