modified rotate, checkLine

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
                     <div class="col-5 bg-oudo d-flex flex-column p-2">
                         <div class="d-flex justify-content-between">
                             <h5>LEVEL:</h5>
-                            <h5>0000</h5>
+                            <h5 id="level">0000</h5>
                         </div>
                         <div class="col-12 d-flex justify-content-between">
                             <h5>LINES:</h5>
-                            <h5>0000</h5>
+                            <h5 id="lines">0000</h5>
                         </div>
                         <div class="col-12 d-flex justify-content-between">
                             <h5>SCORE:</h5>
-                            <h5>0000</h5>
+                            <h5 id="socre">0000</h5>
                         </div>
                     </div>
                     <canvas id="miniCanvas" width="120px"></canvas>
