--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </div>
                         <div class="col-12 d-flex justify-content-between">
                             <h5>SCORE:</h5>
-                            <h5 id="socre">0000</h5>
+                            <h5 id="score">0000</h5>
                         </div>
                     </div>
                     <canvas id="miniCanvas" width="120px"></canvas>
