--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
                 <div>
                     <canvas id="canvas"></canvas>
                 </div>
+                <div id="game-over-modal" class="modal">
+                    <div class="modal-content" class="p-5">
+                        <h1 class="pb-3">GAME OVER</h1>
+                        <button id="play-again-button">Play Again</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
