add modal function

--- a/index.html
+++ b/index.html
@@ -67,8 +67,11 @@
                 </div>
                 <div id="game-over-modal" class="modal">
                     <div class="modal-content" class="p-5">
-                        <h1 class="pb-3">GAME OVER</h1>
-                        <button id="play-again-button">Play Again</button>
+                        <h1 class="col-12 pb-3">GAME OVER</h1>
+                        <div class="col-12 d-flex flex-row justify-content-around">
+                            <button id="quit-button" class="quit-button col-6">Quit</button>
+                            <button id="play-again-button" class="play-again-button col-6">Play Again</button>
+                        </div>
                     </div>
                 </div>
             </div>
