add high score function

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                 <div>
                     <canvas id="canvas"></canvas>
                 </div>
+                <div class="col-12 d-flex justify-content-center p-3">
+                    <h3 id="highScore" class="text-white" data-score="0">High Score : 0000</h3>
+                </div>
                 <div id="game-over-modal" class="modal">
                     <div class="modal-content" class="p-5">
                         <h1 class="col-12 pb-3">GAME OVER</h1>
