how to play button(中身はまだ)

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                         <button id="startBtn" class="btn btn-outline-warning btn-lg col-12">START</button>
                     </div>
                 </div>
+                <div class="col-12 d-flex justify-content-center p-2">
+                    <span id="infoBtn" class="info-button"><i class="fas fa-info-circle fa-2x" style="color: white"></i></span>
+                </div>
             </div>
         </div>
     </div>
