--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
                     </div>
                     <div class="d-flex flex-column">
                         <div>
-                            <h3 class="text-white text-center">HOLD</h3>
+                            <h3 class="text-warning text-center"><strong>HOLD</strong></h3>
                             <canvas id="holdCanvas"></canvas>
                         </div>
                         <div>
-                            <h3 class="text-white text-center pt-2">NEXT</h3>
+                            <h3 class="text-warning text-center pt-2"><strong>NEXT</strong></h3>
                             <canvas id="nextCanvas"></canvas>
                         </div>
                     </div>
