--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
                             <h3 class="text-warning text-center pt-2"><strong>NEXT</strong></h3>
                             <canvas id="nextCanvas"></canvas>
                         </div>
+                        <div class="d-flex flex-column justify-content-center">
+                            <h3 class="text-warning text-center pt-2"><strong>VOLUME</strong></h3>
+                            <input type="range" min="0" max="1" step="0.01" value="0.5" id="volumeSlider" class="mx-3">
+                        </div>
                     </div>
                 </div>
                 <div id="game-over-modal" class="modal">
@@ -128,7 +132,6 @@
                         </div>
                     </div>
                 </div>
-                <input type="range" min="0" max="1" step="0.01" value="0.5" id="volumeSlider">
             </div>
         </div>
     </div>
