モーダルのデザイン変更

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     <span id="infoBtn" class="info-button"><i class="fas fa-info-circle fa-2x" style="color: white"></i></span>
                 </div>
                 <div id="infoModal" class="modal info-modal">
-                    <div class="info-modal-content text-dark d-flex flex-column justify-content-center">
-                        <h3 class="pb-2"><strong>HOW TO PLAY</strong></h3>
+                    <div class="info-modal-content text-dark d-flex flex-column justify-content-center p-5">
+                        <h3 class="pb-3"><strong>HOW TO PLAY</strong></h3>
                         <table class="table">
                             <thead>
                                 <tr class="table-warning">
@@ -66,7 +66,6 @@
                                 </tr>
                               </tbody>
                         </table>
-                        <span class="close">&times;</span>
                     </div>
                   </div>
             </div>
