--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                   <td colspan="2">ハードドロップ</td>
                                 </tr>
                                 <tr>
-                                  <th scope="row">space</th>
+                                  <th scope="row">shift</th>
                                   <td colspan="2">ホールド</td>
                                 </tr>
                               </tbody>
@@ -74,7 +74,7 @@
     <!-- メイン画面 -->
     <div id="mainPage" class="d-none">
         <div class="vh-100 bg-dark d-flex justify-content-center align-items-center">
-            <div class="d-flex flex-column justify-content-start">
+            <div class="d-flex flex-column justify-content-start offset-1">
                 <div class="d-flex flex-row justify-content-between pb-2" style="height: 120px; width: 360px;">
                     <div class="col-5 bg-oudo d-flex flex-column p-2">
                         <div class="d-flex justify-content-between">
