--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <div class="col-4 bg-oudo d-flex flex-column justify-content-center p-2 text-center">
-                        <h4 class="text-primary"><strong>BEST SCORE</strong></h4>
+                        <h4 class="text-dark"><strong>BEST SCORE</strong></h4>
                         <h4 id="highScore" data-score="0">0</h4>
                     </div>
                     <div class="d-flex flex-column justify-content-around align-items-center">
