--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/b5fd11547c.js" crossorigin="anonymous"></script>
     <!-- CSSの読み込み -->
     <link rel="stylesheet" href="style.css">
-    <title>お試しテトリス</title>
+    <title>テトリス</title>
 </head>
 <body>
     <!-- スタート画面 -->
@@ -46,11 +46,11 @@
                               <tbody>
                                 <tr>
                                   <th scope="row">←</th>
-                                  <td>左移動</td>
+                                  <td>左に動く</td>
                                 </tr>
                                 <tr>
                                   <th scope="row">→</th>
-                                  <td>右移動</td>
+                                  <td>右に動く</td>
                                 </tr>
                                 <tr>
                                   <th scope="row">↑</th>
@@ -61,7 +61,7 @@
                                   <td colspan="2">ハードドロップ</td>
                                 </tr>
                                 <tr>
-                                  <th scope="row">shift</th>
+                                  <th scope="row">SHIFT</th>
                                   <td colspan="2">ホールド</td>
                                 </tr>
                               </tbody>
